@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2018 the original author or authors.
+ *    Copyright 2009-2019 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,14 +15,14 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class FloatTypeHandlerTest extends BaseTypeHandlerTest {
+class FloatTypeHandlerTest extends BaseTypeHandlerTest {
 
   private static final TypeHandler<Float> TYPE_HANDLER = new FloatTypeHandler();
 
@@ -37,10 +37,10 @@ public class FloatTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getFloat("column")).thenReturn(100f);
-    assertEquals(new Float(100f), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Float.valueOf(100f), TYPE_HANDLER.getResult(rs, "column"));
 
     when(rs.getFloat("column")).thenReturn(0f);
-    assertEquals(new Float(0f), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Float.valueOf(0f), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -55,10 +55,10 @@ public class FloatTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getFloat(1)).thenReturn(100f);
-    assertEquals(new Float(100f), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Float.valueOf(100f), TYPE_HANDLER.getResult(rs, 1));
 
     when(rs.getFloat(1)).thenReturn(0f);
-    assertEquals(new Float(0f), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Float.valueOf(0f), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -73,10 +73,10 @@ public class FloatTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getFloat(1)).thenReturn(100f);
-    assertEquals(new Float(100f), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Float.valueOf(100f), TYPE_HANDLER.getResult(cs, 1));
 
     when(cs.getFloat(1)).thenReturn(0f);
-    assertEquals(new Float(0f), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Float.valueOf(0f), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
